--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -162,11 +162,12 @@ $contact-link-transition: 0.25s ease-out;
     }
   }
   @media (max-width: 991.98px) {
-    width: 70vw;
     margin-left: 15vw;
+    width: 70vw;
   }
   @media (max-width: 767.98px) {
-    width: 100%;
     margin: 0;
+    padding: calc(1rem + 1vw) 0;
+    width: 100%;
   }
 }
